--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/png" href="/logo/logo.png"/>
+    <link rel="icon" type="image/png" href="/logo/main.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Jira2.0</title>
     <style>
