This commit -> * Added custom color theme * Added Project section to dashboard * Used theme provider

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,6 +11,10 @@
             margin: 0;
             box-sizing: border-box;
         }
+
+        body::-webkit-scrollbar {
+            display: none;
+        }
     </style>
 </head>
 <body>
