--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/png" href="/logo/main.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <title>Jira2.0</title>
     <style>
         * {
             padding: 0;
             margin: 0;
             box-sizing: border-box;
+            font-family: "Roboto Slab", sans-serif, Serif;
         }
 
         body::-webkit-scrollbar {
