This commit -> * Added hover effect on jira summary box * Added Roboto Slab font for entire application

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -16,6 +16,10 @@
             font-family: "Roboto Slab", sans-serif, Serif;
         }
 
+        h1, h2, h3, h4, h5, h6, p, input, textarea, span {
+            font-family: "Roboto Slab", sans-serif, Serif !important;
+        }
+
         body::-webkit-scrollbar {
             display: none;
         }
